tests/snapshots/output_table_integration__tty_long_strings_truncated.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags     |  Score | Section
-------------------------------------------------------------|----------|--------|--------
https://very-long-subdomain.malware-domain.example.com/pa... | url      |      0 | .rdata 
C:\Users\Administrator\AppData\Local\Temp\aaaaaaaaaaaaaaa... | filepath |      0 | .data
