tests/snapshots/output_table_integration__tty_missing_optional_fields.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags   |  Score | Section
-------------------------------------------------------------|--------|--------|--------
kernel32.dll                                                 | import |     50 |        
mysterious string                                            |        |     10 | .text  
bare minimum                                                 |        |      0 |
