tests/snapshots/output_table_integration__tty_multiple_strings.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags     |  Score | Section
-------------------------------------------------------------|----------|--------|--------
https://malware.example.com/beacon                           | url      |    150 | .rdata 
C:\Windows\System32\cmd.exe                                  | filepath |    120 | .data  
GetProcAddress                                               | import   |     80 |        
192.168.1.100                                                | ipv4     |    100 | .rodata
