tests/snapshots/output_table_integration__tty_single_string.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags |  Score | Section
-------------------------------------------------------------|------|--------|--------
GetProcAddress                                               |      |      0 |
