tests/snapshots/output_table_integration__tty_special_characters.snap
---
source: tests/output_table_integration.rs
assertion_line: 142
expression: result
---
String                                                       | Tags     |  Score | Section
-------------------------------------------------------------|----------|--------|--------
string with\ttab                                             |          |     10 | .data  
pipe|character                                               |          |     10 | .data  
backslash\here                                               | filepath |     20 | .rdata
