tests/snapshots/output_table_integration__tty_strings_with_multiple_tags.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags   |  Score | Section
-------------------------------------------------------------|--------|--------|--------
http://evil.com/download.exe                                 | url    |    200 | .rdata 
user@example.com                                             | domain |     90 | .data
