tests/snapshots/output_table_integration__tty_various_encodings.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags |  Score | Section
-------------------------------------------------------------|------|--------|--------
ASCII string                                                 |      |     50 | .rodata
UTF-8 string                                                 |      |     50 | .rodata
UTF-16LE string                                              |      |     50 | .data
